# NOVA

./: MANUALCONTROL  MANUALCONTROL.md  README.md
controller/: package.xml  setup.py
controller/config/: joystick.yaml
controller/controller/: joystick_to_motor.py  motor_driver.py
controller/launch/: joystick.launch.py  motor.launch.py
install/: local_setup.sh  setup.sh
install/controller/lib/controller/: joystick_to_motor
install/controller/share/controller/: package.sh
install/nova_bringup/share/nova_bringup/: local_setup.sh  package.sh
install/nova_description/share/nova_description/: package.sh
install/nova_gazebo/share/nova_gazebo/: local_setup.sh  package.sh
install/serial_motor_demo/share/serial_motor_demo/: package.sh
install/serial_motor_demo_msgs/share/serial_motor_demo_msgs/: package.sh
log/: latest_build
nova_bringup/launch/: nav.launch.py
src/controller/config/: joystick.yaml
src/controller/controller/: joystick_to_motor.py
src/controller/launch/: joystick.launch.py
src/nova_bringup/: CMakeLists.txt
src/nova_description/: CMakeLists.txt
src/nova_gazebo/: CMakeLists.txt
src/nova_sensors/: README.md  package.xml  setup.cfg  setup.py
src/nova_sensors/nova_sensors/: gps_node.py  imu_node.py
src/nova_vision/: README.md  dual_cameras.launch.py  gps_cameras.launch.py  package.xml  setup.cfg  setup.py
src/nova_vision/nova_vision/: README.md  aruco_detect.py  camera_publisher.py  camera_subscriber.py  gps_aruco.py  gps_display.py  line_follower.py  multi_camera_publisher.py  object_tracker.py
(+9 files in other folders)
