<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nova_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tonithetutor@gmail.com">toni</maintainer>
  <license>Apache-2.0</license>
   <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

<!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
